Fixed legacy VCMI, it crashes when loading a map

--- a/project/jni/application/vcmi-r2387/AndroidAppSettings.cfg
+++ b/project/jni/application/vcmi-r2387/AndroidAppSettings.cfg
@@ -18,6 +18,7 @@ CompatibilityHacksStaticInit=n
 CompatibilityHacksTextInputEmulatesHwKeyboard=n
 CompatibilityHacksPreventAudioChopping=n
 CompatibilityHacksAppIgnoresAudioBufferSize=n
+CompatibilityHacksAdditionalPreloadedSharedLibraries="vcmi"
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 ShowMouseCursor=n
