--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -35,7 +35,7 @@ RedefinedKeysScreenKb="0 1 2 3 4 5 6 7 8 9"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions='OptionalDownloadConfig'
 FirstStartMenuOptions=''
-MultiABI=n
+MultiABI=y
 AppMinimumRAM=0
 AppVersionCode=101
 AppVersionName="1.01"
