Updated OpenArena once again

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -39,8 +39,8 @@ MultiABI=y
 AppMinimumRAM=300
 AppVersionCode=08818
 AppVersionName="0.8.8.18"
-ResetSdlConfigForThisVersion=y
-DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag .openarena/baseoa/q3config.cfg"
+ResetSdlConfigForThisVersion=n
+DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag"
 CompiledLibraries="sdl_mixer sdl_image freetype curl vorbis ogg"
 CustomBuildScript=y
 AppCflags='-O2 -finline-functions'
