Updated UQM to the point it actually runs

--- a/project/jni/application/sc2/AndroidAppSettings.cfg
+++ b/project/jni/application/sc2/AndroidAppSettings.cfg
@@ -42,9 +42,9 @@ AppVersionCode=07023
 AppVersionName="0.7.0.23"
 ResetSdlConfigForThisVersion=y
 DeleteFilesOnUpgrade="%"
-CompiledLibraries="sdl_image tremor ogg mikmod"
+CompiledLibraries="sdl_image tremor ogg"
 CustomBuildScript=n
-AppCflags='-O3 -DGFXMODULE_SDL -DOVCODEC_TREMOR -DNETPLAY=NETPLAY_FULL -DHAVE_JOYSTICK -DHAVE_ZIP=1 -DTHREADLIB_SDL'
+AppCflags='-O3 -DGFXMODULE_SDL -DOVCODEC_TREMOR -DNETPLAY=NETPLAY_FULL -DHAVE_JOYSTICK -DHAVE_ZIP=1 -DTHREADLIB_SDL -DUSE_INTERNAL_MIKMOD'
 AppLdflags=''
 AppOverlapsSystemHeaders=y
 AppSubdirsBuild='src src/libs/* src/uqm/*'
