More remappable gamepad buttons, updated OpenArena project

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -28,7 +28,7 @@ AppUsesJoystick=y
 AppUsesAccelerometer=n
 AppUsesMultitouch=y
 NonBlockingSwapBuffers=n
-RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
+RedefinedKeys="SPACE SPACE NO_REMAP NO_REMAP RETURN ESCAPE LCTRL"
 AppTouchscreenKeyboardKeysAmount=5
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="SLASH BACKSPACE TAB END LCTRL SPACE UNKNOWN UNKNOWN UNKNOWN UNKNOWN"
