--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -18,6 +18,7 @@ CompatibilityHacksStaticInit=n
 CompatibilityHacksTextInputEmulatesHwKeyboard=n
 CompatibilityHacksPreventAudioChopping=n
 CompatibilityHacksAppIgnoresAudioBufferSize=n
+CompatibilityHacksAdditionalPreloadedSharedLibraries=""
 AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 ShowMouseCursor=n
@@ -26,6 +27,7 @@ AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=y
 AppUsesAccelerometer=y
+AppUsesGyroscope=y
 AppUsesMultitouch=y
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
@@ -45,7 +47,9 @@ CompiledLibraries="sdl_mixer sdl_image"
 CustomBuildScript=n
 AppCflags='-O2 -finline-functions'
 AppLdflags=''
+AppOverlapsSystemHeaders=
 AppSubdirsBuild=''
+AppBuildExclude=''
 AppCmdline=''
 ReadmeText='^Readme text'
 MinimumScreenSize=s
