--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -18,6 +18,7 @@ CompatibilityHacksStaticInit=n
 CompatibilityHacksTextInputEmulatesHwKeyboard=n
 CompatibilityHacksPreventAudioChopping=n
 CompatibilityHacksAppIgnoresAudioBufferSize=n
+CompatibilityHacksAdditionalPreloadedSharedLibraries=""
 AppUsesMouse=n
 AppNeedsTwoButtonMouse=n
 ShowMouseCursor=n
@@ -26,6 +27,7 @@ AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=y
 AppUsesAccelerometer=n
+AppUsesGyroscope=y
 AppUsesMultitouch=y
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE SPACE NO_REMAP NO_REMAP RETURN ESCAPE LCTRL"
@@ -45,7 +47,9 @@ CompiledLibraries="sdl_mixer sdl_image freetype curl vorbis ogg"
 CustomBuildScript=y
 AppCflags='-O2 -finline-functions'
 AppLdflags=''
+AppOverlapsSystemHeaders=
 AppSubdirsBuild=''
+AppBuildExclude=''
 AppCmdline=''
 ReadmeText='^Readme text'
 MinimumScreenSize=n
