--- a/project/jni/application/vcmi/Makefile
+++ b/project/jni/application/vcmi/Makefile
@@ -2,7 +2,8 @@
 $(shell mkdir -p AI debug/AI Scripting debug/Scripting \
 	out/vcmi/lib out/vcmi/lib/Filesystem out/vcmi/lib/Mapping \
 	out/vcmi/lib/RMG out/vcmi/server out/vcmi/AI/StupidAI \
-	out/vcmi/AI/GeniusAI out/vcmi/client out/vcmi/Scripting/ERM)
+	out/vcmi/AI/BattleAI out/vcmi/AI/FuzzyLite out/vcmi/AI/VCAI \
+	out/vcmi/AI/EmptyAI out/vcmi/client out/vcmi/Scripting/ERM)
 $(shell rm -f ../../../obj/local/armeabi/libvcmi.so)
 
 LOCAL_PATH=$(shell dirname $0)
@@ -28,14 +29,11 @@ OBJS_SERVER=$(patsubst %.cpp, out/%.o, $(SOURCES_SERVER))
 SOURCES_CLIENT=$(wildcard vcmi/client/*.cpp vcmi/client/BattleInterface/*.cpp vcmi/client/UIFramework/*.cpp)
 OBJS_CLIENT=$(patsubst %.cpp, out/%.o, $(SOURCES_CLIENT))
 
-#SOURCES_GENIUSAI=$(filter-out %/ExpertSystem.cpp, $(wildcard vcmi/AI/GeniusAI/*.cpp))
-#OBJS_GENIUSAI=$(patsubst %.cpp, out/%.o, $(SOURCES_GENIUSAI))
-
 SOURCES_BATTLEAI=$(wildcard vcmi/AI/BattleAI/*.cpp)
 OBJS_BATTLEAI=$(patsubst %.cpp, out/%.o, $(SOURCES_BATTLEAI))
 
 SOURCES_EMPTYAI=$(wildcard vcmi/AI/EmptyAI/*.cpp)
-OBJS_BATTLEAI=$(patsubst %.cpp, out/%.o, $(SOURCES_EMPTYAI))
+OBJS_EMPTYAI=$(patsubst %.cpp, out/%.o, $(SOURCES_EMPTYAI))
 
 SOURCES_FUZZYLITE=$(wildcard vcmi/AI/FuzzyLite/*.cpp)
 OBJS_FUZZYLITE=$(patsubst %.cpp, out/%.o, $(SOURCES_FUZZYLITE))
@@ -58,7 +56,7 @@ AndroidData/binaries.zip: vcmiserver AI/libAI.so Scripting/libvcmiERM.so
 	rm -f $@
 	zip -r $@ $^
 
-$(OBJS_SERVER) $(OBJS_LIB) $(OBJS_LIB_FILESYSTEM) $(OBJS_LIB_MAPPING) $(OBJS_LIB_RMG) $(OBJS_GENIUSAI) $(OBJS_STUPIDAI) $(OBJS_CLIENT) $(OBJS_ERM): out/%.o: %.cpp
+$(OBJS_SERVER) $(OBJS_LIB) $(OBJS_LIB_FILESYSTEM) $(OBJS_LIB_MAPPING) $(OBJS_LIB_RMG) $(OBJS_BATTLEAI) $(OBJS_EMPTYAI) $(OBJS_FUZZYLITE) $(OBJS_STUPIDAI) $(OBJS_VCAI) $(OBJS_CLIENT) $(OBJS_ERM): out/%.o: %.cpp
 	../setEnvironment.sh sh -c \
 	"$(GCC_PREFIX)-g++ \
 	-c \$$CXXFLAGS -Ivcmi -std=c++11 -Ivcmi/lib \
