Proper loading for libvcmi.so, now it crashes after entering main()

--- a/project/jni/application/vcmi/AndroidAppSettings.cfg
+++ b/project/jni/application/vcmi/AndroidAppSettings.cfg
@@ -45,12 +45,12 @@ AppVersionCode=09100
 AppVersionName="0.91.00"
 ResetSdlConfigForThisVersion=n
 DeleteFilesOnUpgrade="%"
-CompiledLibraries="mad sdl_mixer sdl_image sdl_ttf avcodec avformat avutil swscale boost_program_options boost_filesystem boost_iostreams boost_system boost_thread android"
+CompiledLibraries="mad sdl_mixer sdl_image sdl_ttf avutil avcodec avformat swscale boost_program_options boost_filesystem boost_iostreams boost_system boost_thread android"
 CustomBuildScript=y
-AppCflags='-DM_DATA_DIR=\"/sdcard/app-data/eu.vcmi\" -DM_BIN_DIR=\"/data/data/eu.vcmi/files\" -DM_LIB_DIR=\"/data/data/eu.vcmi/files\" -DWITH_AVCODEC_DECODE_VIDEO2=1 -Wstrict-aliasing -Wcast-align -Wpointer-arith -Waddress'
-AppLdflags='-lz -Ljni/application/vcmi -lvcmi'
+AppCflags=''
+AppLdflags=''
 AppOverlapsSystemHeaders=
-AppSubdirsBuild='vcmi/client vcmi/CCallback.cpp'
+AppSubdirsBuild=''
 AppBuildExclude=''
 AppCmdline=''
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
