Minor fixes to VICE

--- a/project/jni/application/vice/AndroidAppSettings.cfg
+++ b/project/jni/application/vice/AndroidAppSettings.cfg
@@ -52,7 +52,7 @@ AppLdflags=''
 AppOverlapsSystemHeaders=
 AppSubdirsBuild=''
 AppBuildExclude=''
-AppCmdline='vice -sdlcustomw 640 -sdlcustomh 400 -sdllimitmode 1 +truedrive'
+AppCmdline='vice +truedrive +VICIIdsize'
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
 MinimumScreenSize=s
 AdmobPublisherId=n
