WIP audio recording, it crashes yet.

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -31,6 +31,7 @@ AppUsesJoystick=y
 AppUsesAccelerometer=n
 AppUsesGyroscope=y
 AppUsesMultitouch=y
+AppRecordsAudio=y
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE SPACE NO_REMAP NO_REMAP RETURN ESCAPE LCTRL"
 AppTouchscreenKeyboardKeysAmount=5
@@ -42,8 +43,8 @@ HiddenMenuOptions='OptionalDownloadConfig DisplaySizeConfig'
 FirstStartMenuOptions=''
 MultiABI=y
 AppMinimumRAM=300
-AppVersionCode=08820
-AppVersionName="0.8.8.20"
+AppVersionCode=08821
+AppVersionName="0.8.8.21"
 ResetSdlConfigForThisVersion=n
 DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag"
 CompiledLibraries="sdl_mixer sdl_image freetype curl vorbis ogg"
