Also send raw accelerometer events, in addition to gravity vector

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -28,7 +28,7 @@ ForceRelativeMouseMode=n
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=y
-AppUsesAccelerometer=n
+AppUsesAccelerometer=y
 AppUsesGyroscope=y
 AppUsesMultitouch=y
 AppRecordsAudio=y
