Some lame-ass optimizations to JNI, which can make SDL crash

--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -47,7 +47,7 @@ AppVersionCode=08822
 AppVersionName="0.8.8.22"
 ResetSdlConfigForThisVersion=n
 DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag"
-CompiledLibraries="sdl_mixer sdl_image freetype curl vorbis ogg"
+CompiledLibraries="sdl_mixer sdl_image freetype curl vorbis ogg openal"
 CustomBuildScript=y
 AppCflags='-O2 -finline-functions'
 AppLdflags=''
