Commander Genius Update

--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -31,18 +31,20 @@ AppUsesJoystick=n
 AppUsesAccelerometer=y
 AppUsesGyroscope=n
 AppUsesMultitouch=n
+AppRecordsAudio=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="LCTRL LALT NO_REMAP NO_REMAP RETURN ESCAPE"
 AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=1
 RedefinedKeysScreenKb="LCTRL LALT SPACE RETURN"
+RedefinedKeysScreenKbNames="LCTRL LALT SPACE RETURN"
 StartupMenuButtonTimeout=3000
 HiddenMenuOptions=''
 FirstStartMenuOptions=''
 MultiABI=n
 AppMinimumRAM=64
 AppVersionCode=120000
-AppVersionName="1.2 Beta"
+AppVersionName="1.2 Release"
 ResetSdlConfigForThisVersion=n
 DeleteFilesOnUpgrade="%"
 CompiledLibraries="tremor ogg"
