--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -5,7 +5,7 @@ AppName="Commander Genius"
 AppFullName=net.sourceforge.clonekeenplus
 ScreenOrientation=h
 InhibitSuspend=n
-AppDataDownloadUrl="!Keen1|keen1.zip^!Keen4|keen4.zip^!Keen7|keen7.zip^High-quality GFX and music - 50 Mb|http://sourceforge.net/projects/clonekeenplus/files/High%20Quality%20Packs/Version%201.x/hqpv19.zip/download"
+AppDataDownloadUrl="!Keen1|keen1.zip^!Keen4|keen4.zip^!Keen7|keen7.zip^High-quality GFX and music - 50 Mb|http://sourceforge.net/projects/clonekeenplus/files/High%20Quality%20Packs/Version%202.x/hqpv20.zip/download"
 VideoDepthBpp=24
 NeedDepthBuffer=n
 NeedStencilBuffer=n
@@ -43,11 +43,11 @@ HiddenMenuOptions=''
 FirstStartMenuOptions=''
 MultiABI=n
 AppMinimumRAM=64
-AppVersionCode=120000
-AppVersionName="1.2 Release"
+AppVersionCode=140000
+AppVersionName="1.4 Beta"
 ResetSdlConfigForThisVersion=n
 DeleteFilesOnUpgrade="%"
-CompiledLibraries="tremor ogg"
+CompiledLibraries="tremor ogg sdl_image"
 CustomBuildScript=n
 AppCflags='-frtti -fexceptions -finline-functions -O2 -DTREMOR=1 -DANDROID=1 -DBUILD_TYPE=LINUX -DTARGET_LNX=1 -Werror=strict-aliasing -Werror=cast-align -Werror=pointer-arith -Werror=address -std=c++11'
 AppLdflags='-ltremor'
