--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -43,8 +43,8 @@ HiddenMenuOptions=''
 FirstStartMenuOptions=''
 MultiABI=n
 AppMinimumRAM=64
-AppVersionCode=140000
-AppVersionName="1.4 Beta"
+AppVersionCode=140010
+AppVersionName="1.4 Release"
 ResetSdlConfigForThisVersion=n
 DeleteFilesOnUpgrade="%"
 CompiledLibraries="tremor ogg sdl_image"
