Second joystick support

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -28,13 +28,14 @@ ForceRelativeMouseMode=n
 AppNeedsArrowKeys=y
 AppNeedsTextInput=y
 AppUsesJoystick=y
+AppUsesSecondJoystick=y
 AppUsesAccelerometer=y
 AppUsesGyroscope=y
 AppUsesMultitouch=y
 AppRecordsAudio=n
 NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP SPACE ESCAPE"
-AppTouchscreenKeyboardKeysAmount=4
+AppTouchscreenKeyboardKeysAmount=6
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 RedefinedKeysScreenKb="0 1 2 3 4 5 6 7 8 9"
 RedefinedKeysScreenKbNames="0 1 2 3 4 5 6 7 8 9"
