Updated UQM project with dynamic on-screen keyboard

--- a/project/jni/application/sc2/AndroidAppSettings.cfg
+++ b/project/jni/application/sc2/AndroidAppSettings.cfg
@@ -47,7 +47,7 @@ SwVideoMode=y
 SdlVideoResize=y
 
 # Application resizing will keep 4:3 aspect ratio, with black bars at sides (y)/(n)
-SdlVideoResizeKeepAspect=y
+SdlVideoResizeKeepAspect=n
 
 # Application does not call SDL_Flip() or SDL_UpdateRects() appropriately, or draws from non-main thread -
 # enabling the compatibility mode will force screen update every 100 milliseconds, which is laggy and inefficient (y) or (n)
@@ -88,7 +88,7 @@ ShowMouseCursor=n
 ForceRelativeMouseMode=n
 
 # Application needs arrow keys (y) or (n), will show on-screen dpad/joystick (y) or (n)
-AppNeedsArrowKeys=y
+AppNeedsArrowKeys=n
 
 # Application needs text input (y) or (n), enables button for text input on screen
 AppNeedsTextInput=y
@@ -127,13 +127,13 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="RETURN RSHIFT NO_REMAP NO_REMAP RCTRL F10"
 
 # Number of virtual keyboard keys (currently 6 is maximum)
-AppTouchscreenKeyboardKeysAmount=3
+AppTouchscreenKeyboardKeysAmount=6
 
 # Number of virtual keyboard keys that support autofire (currently 2 is maximum)
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 
 # Redefine on-screen keyboard keys to SDL keysyms - 6 keyboard keys + 4 multitouch gestures (zoom in/out and rotate left/right)
-RedefinedKeysScreenKb="RCTRL RSHIFT UP Q A E"
+RedefinedKeysScreenKb="RCTRL RSHIFT END PAGEUP PAGEDOWN W"
 
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
 RedefinedKeysScreenKbNames="Fire Secondary_weapon Thrust Player_2_fire Player_2_secondary_weapon Player_2_thrust"
@@ -168,7 +168,7 @@ AppVersionName="0.7.0.23"
 ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="addons packages menu.key uqm.key uqm.rmp version config/uqm.cfg libsdl-DownloadFinished-4.flag libsdl-DownloadFinished-5.flag libsdl-DownloadFinished-6.flag libsdl-DownloadFinished-7.flag libsdl-DownloadFinished-8.flag"
+DeleteFilesOnUpgrade="addons packages menu.key uqm.key uqm.rmp version config/uqm.cfg config/flight.cfg libsdl-DownloadFinished-4.flag libsdl-DownloadFinished-5.flag libsdl-DownloadFinished-6.flag libsdl-DownloadFinished-7.flag libsdl-DownloadFinished-8.flag"
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
@@ -191,7 +191,7 @@ AppOverlapsSystemHeaders=y
 AppSubdirsBuild='src src/libs/* src/uqm/*'
 
 # Exclude these files from build
-AppBuildExclude='src/libs/uio/hashtable.c src/libs/uio/memdebug.c src/libs/network/socket/socket_win.c src/libs/network/network_win.c src/libs/network/netmanager/netmanager_win.c'
+AppBuildExclude='src/libs/uio/hashtable.c src/libs/uio/memdebug.c src/libs/network/socket/socket_win.c src/libs/network/network_win.c src/libs/network/netmanager/netmanager_win.c src/libs/cdp/cdpapi.c src/libs/cdp/cdp.c src/libs/cdp/windl.c'
 
 # Application command line parameters, including app name as 0-th param
 AppCmdline='uqm --addon lang'
