--- a/project/jni/application/uqm/AndroidAppSettings.cfg
+++ b/project/jni/application/uqm/AndroidAppSettings.cfg
@@ -198,11 +198,11 @@ AppCmdline='uqm --addon lang'
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on
-ReadmeText='^You may press "Home" now - the data will be downloaded in background'
+ReadmeText='Change in controls!\nTap joystick to turn off engines and rotate ship, tap once more to enable engines.'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
-MinimumScreenSize=s
+MinimumScreenSize=m
 
 # Your AdMob Publisher ID, (n) if you don't want advertisements
 AdmobPublisherId=n
