--- a/project/jni/application/uqm/AndroidAppSettings.cfg
+++ b/project/jni/application/uqm/AndroidAppSettings.cfg
@@ -197,8 +197,8 @@ AppBuildExclude='src/libs/uio/hashtable.c src/libs/uio/memdebug.c src/libs/netwo
 AppCmdline='uqm --addon lang'
 
 # Here you may type readme text, which will be shown during startup. Format is:
-# Text in English, use \n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on
-ReadmeText='Change in controls!\nTap joystick to turn off engines and rotate ship, tap once more to enable engines.'
+# Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
+ReadmeText='Change in controls!\\\\nTap joystick to turn off engines and rotate ship, tap once more to enable engines.'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
