Initial port of UQM-HD

--- a/project/jni/application/uqm-hd/AndroidAppSettings.cfg
+++ b/project/jni/application/uqm-hd/AndroidAppSettings.cfg
@@ -6,10 +6,10 @@ AppSettingVersion=18
 LibSdlVersion=1.2
 
 # Specify application name (e.x. My Application)
-AppName="Ur-Quan Masters"
+AppName="Ur-Quan Masters HD"
 
 # Specify reversed site name of application (e.x. com.mysite.myapp)
-AppFullName=com.sourceforge.sc2
+AppFullName=com.googlecode.uqm.hd
 
 # Specify screen orientation: (v)ertical/(p)ortrait or (h)orizontal/(l)andscape
 ScreenOrientation=h
@@ -27,7 +27,7 @@ AppDataDownloadUrl="!!Game data (15 Mb)|http://sourceforge.net/projects/libsdl-a
 
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
-VideoDepthBpp=16
+VideoDepthBpp=24
 
 # Enable OpenGL depth buffer (needed only for 3-d applications, small speed decrease) (y) or (n)
 NeedDepthBuffer=n
@@ -194,11 +194,11 @@ AppSubdirsBuild='src src/libs/* src/uqm/*'
 AppBuildExclude='src/libs/uio/hashtable.c src/libs/uio/memdebug.c src/libs/network/socket/socket_win.c src/libs/network/network_win.c src/libs/network/netmanager/netmanager_win.c src/libs/cdp/cdpapi.c src/libs/cdp/cdp.c src/libs/cdp/windl.c'
 
 # Application command line parameters, including app name as 0-th param
-AppCmdline='uqm --addon lang'
+AppCmdline='uqm --addon lang -x -r 1280x960 -w --resfactor=2'
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
-ReadmeText='Change in controls!\\\\nTap joystick to turn off engines and rotate ship, tap once more to enable engines.\\\\nSecond screen joystick added for two-player melee.'
+ReadmeText='Tap joystick to turn off engines and rotate ship, tap once more to enable engines.\\\\nSecond screen joystick is available for two-player melee.'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
