Added new video mode

--- a/project/jni/application/uqm-hd/AndroidAppSettings.cfg
+++ b/project/jni/application/uqm-hd/AndroidAppSettings.cfg
@@ -194,7 +194,7 @@ AppSubdirsBuild='src src/libs/* src/uqm/*'
 AppBuildExclude='src/libs/uio/hashtable.c src/libs/uio/memdebug.c src/libs/network/socket/socket_win.c src/libs/network/network_win.c src/libs/network/netmanager/netmanager_win.c src/libs/cdp/cdpapi.c src/libs/cdp/cdp.c src/libs/cdp/windl.c'
 
 # Application command line parameters, including app name as 0-th param
-AppCmdline='uqm --addon lang -x -r 1280x960 -w --resfactor=2'
+AppCmdline='uqm --addon lang -x -r 1280x960 -f --resfactor=2'
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
