UQM: new button in readme to get UQM HD

--- a/project/jni/application/uqm/AndroidAppSettings.cfg
+++ b/project/jni/application/uqm/AndroidAppSettings.cfg
@@ -198,7 +198,7 @@ AppCmdline='uqm --addon lang'
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
-ReadmeText='Change in controls!\\\\nTap joystick to turn off engines and rotate ship, tap once more to enable engines.\\\\nSecond screen joystick added for two-player melee.'
+ReadmeText='Change in controls! Tap joystick to turn off engines and rotate ship, tap once more to enable engines.\\\\nSecond screen joystick added for two-player melee.\\\\nUQM HD mod now available, with delicious 720p graphics.\\\\nDo not select multiple translations, only one will work.^button:UQM HD mod:https://play.google.com/store/apps/details?id=com.googlecode.uqm.hd'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
