UQM-HD: Nah, I don't like "beta 1" in version number

--- a/project/jni/application/uqm-hd/AndroidAppSettings.cfg
+++ b/project/jni/application/uqm-hd/AndroidAppSettings.cfg
@@ -162,7 +162,7 @@ AppMinimumRAM=0
 AppVersionCode=07001
 
 # Application user-visible version name (string)
-AppVersionName="0.7.0 beta 1"
+AppVersionName="0.7.0.01"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=n
