--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -127,13 +127,13 @@ NonBlockingSwapBuffers=n
 RedefinedKeys="SPACE RETURN NO_REMAP NO_REMAP"
 
 # Number of virtual keyboard keys (currently 6 is maximum)
-AppTouchscreenKeyboardKeysAmount=3
+AppTouchscreenKeyboardKeysAmount=4
 
 # Number of virtual keyboard keys that support autofire (currently 2 is maximum)
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 
 # Redefine on-screen keyboard keys to SDL keysyms - 6 keyboard keys + 4 multitouch gestures (zoom in/out and rotate left/right)
-RedefinedKeysScreenKb="SPACE PAGEUP PAGEDOWN TAB"
+RedefinedKeysScreenKb="SPACE PAGEDOWN PAGEUP TAB"
 
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
 RedefinedKeysScreenKbNames="Jump Next_weapon Previous_weapon Show_scores"
