--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -133,10 +133,10 @@ AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 
 # Redefine on-screen keyboard keys to SDL keysyms - 6 keyboard keys + 4 multitouch gestures (zoom in/out and rotate left/right)
-RedefinedKeysScreenKb="SPACE PAGEDOWN PAGEUP TAB"
+RedefinedKeysScreenKb="SPACE PAGEDOWN PAGEUP TAB RCTRL RETURN"
 
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
-RedefinedKeysScreenKbNames="Jump Next_weapon Previous_weapon Show_scores"
+RedefinedKeysScreenKbNames="Jump Next_weapon Previous_weapon Show_scores Fire Hook"
 
 # How long to show startup menu button, in msec, 0 to disable startup menu
 StartupMenuButtonTimeout=3000
@@ -198,7 +198,7 @@ AppCmdline=''
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
-ReadmeText='^You may press "Home" now - the data will be downloaded in background'
+ReadmeText='Tap left joystick to launch hook\\\\nSwipe left joystick up or down to jump'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
